fixed auth page not showing

--- a/src/Admin/Home/AdminHome.module.css
+++ b/src/Admin/Home/AdminHome.module.css
@@ -1,6 +1,3 @@
-body{ 
-  padding: 0;
-}
 .heading{
   background: var(--t-green);
   padding: 10px;
